--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script>
-			var socket = io.connect('http://141.219.207.66:8080');
+			var socket = io.connect('http://pi.jsvana.me:8080');
 			var lights = [];
 
 			socket.emit('login', { username: 'test', password: 'hunter2' });
