--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Test</title>
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script src=""></script>
+		<script src="/public/highcharts.js"></script>
 		<script>
 			var chart;
 
