--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 			$(function() {
 				$.getJSON('http://pi.jsvana.me:8080/temperatures', function(data) {
 					var temps = [];
+
 					data.forEach(function(row) {
-						temps.push(row.value);
+						temps.push(.1 * row.value + 2.3);
 					});
 
 			    $(document).ready(function() {
@@ -25,7 +26,10 @@
 							},
 							title: {
 								text: 'Room Temperature',
-								x: -20 //center
+								x: -20
+							},
+							yAxis: {
+								title: 'Temperature'
 							},
 							series: [{
 								name: 'Temperatures',
